@@ -25,6 +25,6 @@ EBUILD gitlab-ce-9.1.7.ebuild 13250 SHA256 be342467f79215ec736c6d1f4d9d26bb67911
 EBUILD gitlab-ce-9.2.7.ebuild 12995 SHA256 93cb032967c0388d706be2dda0cfca2ca4765c0774e283ab0d61769cf43ddea6 SHA512 b8ecb0a4cc893786d4cd2dd94d53a21c6a8fbec5d181843286584914363f1160361dccfe2f61487f6744f7fb4d42a5efc4085e64bca7b29dea7e4672788c49cf WHIRLPOOL 2d8ada573da9e209e7a0bf3f05aef83e2419c18f4406b3abdbb24a90b488acdbdf7d4406b665a92356b457d100dd46c2a39084f87ba90b23da87392f2f98beb4
 EBUILD gitlab-ce-9.3.0_rc2.ebuild 12829 SHA256 6951949f8d98f867746a0128e99ce3baabddecdaa45952565f38a913b2868058 SHA512 3337e413db8680d0d177099425a71c2410afdec9130d57f9c910770aeb12dd7a13c410782f41f8a0cd24d243534d513b66ec4d93eb09c7e15896716863682eb0 WHIRLPOOL 6b9d03912224808065b3bc301f9ce7b82925293db2916cdeb3184b28c0d58fc034b06dda6b43109b251c942d3b4bebd0c4e6bde7c644630baaece585c35ae6d3
 EBUILD gitlab-ce-9.3.5.ebuild 13625 SHA256 dc6861e35fc5808e65da7c956276c7fd86f705a64c72d97db1feb6a938912497 SHA512 7e2e11e3fe21cadbe490cba14bc1b1dc117239a1293b31befe52d26d98877d22191454f2c36cab150b3adf5f741f7281ce61cdbd26eed44d44c75b1bda703c36 WHIRLPOOL 8851ba2c369a7e36f2b99340f80ff46bba63944fb3e0362ec7161c20a5bbc26ca7c5e7a96660035158758454b558c40faa39ca8490fcf39664a54188bb3f9b08
-EBUILD gitlab-ce-9999.ebuild 12789 SHA256 27db871b7d51cae37b6802043c82887bb810c1183682ce6c7efe0dc546d9b29e SHA512 99ca91ab0b8045d8bc2cd9d4208ecd4e8eb96c3d01afe49d119bb5677ee88f5f700042f502ab0c446f7acaaaeb7b9758c6d721a91f256eea335eb744a05a4b27 WHIRLPOOL a1e812d1d9562e7febee89e5c847ea0febec360aee38efc5cf779e45b92bb73eff3f066eb90fb96c292e8cfdc2a322bc9222a786796ac0470a221e44369a3270
-MISC ChangeLog 20093 SHA256 43e885357988a70d91ba1a565c56a7f18092dbad86998f54fbbe25d183ff9df3 SHA512 facdb433fcf354d3f9f7561b00ac18557869681dce75557e4ffde9df21fe1988927685be23029c97298fc81a9ec33aa6d5be66264489a354a1f7df8184522c32 WHIRLPOOL 29ee5017135170ba13b75abbffaf9c1a57d475c4a128409c3cacf2343cd0d635783b5caccdb60cf462903f746984cd4a59b26ad83eb2ea52f72975b4144c708f
+EBUILD gitlab-ce-9999.ebuild 13567 SHA256 e95e726378e2a0d973269468e005b8e6acfd98aab8778866bb65edab422cd468 SHA512 7553b727503842ab765e162f587a89ebf5f41d796d66987c21219fbd4168a99a4d8d93c0db60cb867fd49b0151e81ba56088f75572f4219df77a6f127aac5004 WHIRLPOOL 46c304600e438ba8bf03a79f84dcb6e23a32fe96c980db9c70684a065c740276fcf3c0ce0be0ac3714b77cc0f2356ecd92b154215df5a6484b6938979255f993
+MISC ChangeLog 20224 SHA256 d0a532924a67f4db71e659333d4318cb9728e342940232d8f8015753ecde9a40 SHA512 7e385226053afa4b6254f88ab37efdbf749d227965de1edcd9a12eb411b4b50dbd6ef09eee01aed0eb67e37122e46af5c4bbb98d06015fe83281a98a23854b11 WHIRLPOOL 8a2b2419bb904ae023a126bfdcdf5d30e2c465829ef85d56f4fca74da4d5bdbf181a31262a71419501d4791331edaad1a4b8d4e1f4ce7db9fa649e28b4de37d8
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
